add more vpp language support

--- a/targetfiles/configs/systemverilog.configuration.json
+++ b/targetfiles/configs/systemverilog.configuration.json
@@ -34,7 +34,12 @@
 		["table", "endtable"],
 		["task", "endtask"],
 		["`if", "`endif"],
-		["`for", "`endfor"]
+		["`for", "`endfor"],
+		["`ifnlet", "`endif"],
+		["`iflet", "`endif"],
+		["`ifndef", "`endif"],
+		["`ifdef", "`endif"],
+		["`func", "`endfunc"]
 	],
 
 	"autoClosingPairs": [
